<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <androidx.appcompat.widget.AppCompatImageView
    android:layout_width="@dimen/logo_icon_size"
    android:layout_height="@dimen/logo_icon_size"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    app:srcCompat="@drawable/ic_logo_apps"
    tools:ignore="VectorDrawableCompat" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/txLName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:hint="@string/label_name"
    app:helperText="@string/helper_name"
    app:helperTextEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/txLPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:hint="@string/label_password"
    app:helperText="@string/helper_password"
    app:helperTextEnabled="true"
    app:passwordToggleEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:textColor="@color/colorAccent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:text="@string/label_login_button"
    style="@style/TextAppearance.MaterialComponents.Button"/>

</LinearLayout>